[refs #358] Add inuit.css to styleguide

--- a/kss.config.json
+++ b/kss.config.json
@@ -9,5 +9,8 @@
     "./components",
     "./utilities"
   ],
-  "destination":  "_documentation/"
+  "destination":  "_documentation/",
+  "css": [
+    "kss-assets/inuit.css"
+  ]
 }
