Pick up responsive spacing re-order and bump version
https://github.com/wilddogdesign/inuitcss/commit/90cdd59f5b924924df5a6b216f7daa109ae983f8

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "inuitcss",
-  "version": "6.0.0",
-  "homepage": "https://github.com/inuitcss/inuitcss",
+  "version": "6.0.1",
+  "homepage": "https://github.com/wilddogdesign/inuitcss",
   "authors": [
     "Harry Roberts <csswizardry@gmail.com>"
   ],
